后台首页面结构创建完毕

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -1,5 +1,15 @@
-html,body,#app{
-    height: 100%;
-    margin: 0;
-    padding: 0;
+html,
+body,
+#app {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+/*给左侧权限菜单设置样式*/
+.el-submenu__title,
+.el-menu-item {
+  font-size: 13px;
+}
+i.iconfont {
+  margin-right: 10px;
 }
